// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog a11y when title, subtitle, and ariaRole are not set does not render a role attribute from the ariaRole prop, aria-labelledby pointing at the title element or an aria-describedby attribute pointing at the subtitle element 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-dialog"
    data-component="dialog"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal"
    >
      <div
        className="carbon-dialog__dialog carbon-dialog__dialog--medium"
        data-component="dialog"
        onBlur={[Function]}
        style={
          Object {
            "minHeight": undefined,
          }
        }
        tabIndex={0}
      >
        <div
          className="carbon-dialog__content"
        >
          <div
            className="carbon-dialog__inner-content"
            style={Object {}}
          />
        </div>
        <Icon
          bgSize="small"
          className="carbon-dialog__close"
          data-element="close"
          onBlur={[Function]}
          onClick={[Function]}
          tabIndex="0"
          type="close"
        />
      </div>
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    >
      <div
        className="carbon-modal__background"
      />
    </CSSTransitionGroup>
  </div>
</Portal>
`;

exports[`Dialog a11y when title, subtitle, and ariaRole are set renders a role attribute from the ariaRole prop, aria-labelledby pointing at the title element and an aria-describedby attribute pointing at the subtitle element 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-dialog"
    data-component="dialog"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal"
    >
      <div
        aria-describedby="carbon-dialog-subtitle"
        aria-labelledby="carbon-dialog-title"
        className="carbon-dialog__dialog carbon-dialog__dialog--medium"
        data-component="dialog"
        onBlur={[Function]}
        role="dialog"
        style={
          Object {
            "minHeight": undefined,
          }
        }
        tabIndex={0}
      >
        <div
          className="carbon-dialog__title carbon-dialog__title--has-subheader"
        >
          <Heading
            divider={true}
            separator={false}
            subheader="Test"
            subtitleId="carbon-dialog-subtitle"
            title="Test"
            titleId="carbon-dialog-title"
          />
        </div>
        <div
          className="carbon-dialog__content"
        >
          <div
            className="carbon-dialog__inner-content"
            style={Object {}}
          />
        </div>
        <Icon
          bgSize="small"
          className="carbon-dialog__close"
          data-element="close"
          onBlur={[Function]}
          onClick={[Function]}
          tabIndex="0"
          type="close"
        />
      </div>
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    >
      <div
        className="carbon-modal__background"
      />
    </CSSTransitionGroup>
  </div>
</Portal>
`;

exports[`Dialog dialogTitle when a props object title is passed wraps it within a div 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-dialog"
    data-component="dialog"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal"
    >
      <div
        aria-labelledby="carbon-dialog-title"
        className="carbon-dialog__dialog carbon-dialog__dialog--medium"
        data-component="dialog"
        onBlur={[Function]}
        role="dialog"
        style={
          Object {
            "minHeight": undefined,
          }
        }
        tabIndex={0}
      >
        <div
          className="carbon-dialog__title"
        >
          <Row
            gutter="medium"
          >
            <Column>
              Row1
            </Column>
            <Column>
              Row2
            </Column>
          </Row>
        </div>
        <div
          className="carbon-dialog__content"
        >
          <div
            className="carbon-dialog__inner-content"
            style={Object {}}
          />
        </div>
        <Icon
          bgSize="small"
          className="carbon-dialog__close"
          data-element="close"
          onBlur={[Function]}
          onClick={[Function]}
          tabIndex="0"
          type="close"
        />
      </div>
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    >
      <div
        className="carbon-modal__background"
      />
    </CSSTransitionGroup>
  </div>
</Portal>
`;

exports[`Dialog dialogTitle when a props title is passed sets a dialog header 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-dialog"
    data-component="dialog"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal"
    >
      <div
        aria-describedby="carbon-dialog-subtitle"
        aria-labelledby="carbon-dialog-title"
        className="carbon-dialog__dialog carbon-dialog__dialog--medium"
        data-component="dialog"
        onBlur={[Function]}
        role="dialog"
        style={
          Object {
            "minHeight": undefined,
          }
        }
        tabIndex={0}
      >
        <div
          className="carbon-dialog__title carbon-dialog__title--has-subheader"
        >
          <Heading
            divider={true}
            separator={false}
            subheader="Dialog subtitle"
            subtitleId="carbon-dialog-subtitle"
            title="Dialog title"
            titleId="carbon-dialog-title"
          />
        </div>
        <div
          className="carbon-dialog__content"
        >
          <div
            className="carbon-dialog__inner-content"
            style={Object {}}
          />
        </div>
        <Icon
          bgSize="small"
          className="carbon-dialog__close"
          data-element="close"
          onBlur={[Function]}
          onClick={[Function]}
          tabIndex="0"
          type="close"
        />
      </div>
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    >
      <div
        className="carbon-modal__background"
      />
    </CSSTransitionGroup>
  </div>
</Portal>
`;

exports[`Dialog render when dialog is closed renders a parent div with mainClasses attached 1`] = `
<Portal
  open={false}
>
  <div
    className="carbon-dialog"
    data-component="dialog"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal"
    />
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    />
  </div>
</Portal>
`;

exports[`Dialog render when dialog is open has the correct content, tags, elements etc 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-dialog foo"
    data-component="dialog"
    data-element="bar"
    data-role="baz"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal"
    >
      <div
        aria-describedby="carbon-dialog-subtitle"
        aria-labelledby="carbon-dialog-title"
        className="carbon-dialog__dialog carbon-dialog__dialog--small carbon-dialog__dialog--has-height"
        data-component="dialog"
        data-element="bar"
        data-role="baz"
        onBlur={[Function]}
        role="dialog"
        style={
          Object {
            "minHeight": "500px",
          }
        }
        tabIndex={0}
      >
        <div
          className="carbon-dialog__title carbon-dialog__title--has-subheader"
        >
          <Heading
            divider={true}
            separator={false}
            subheader="Test"
            subtitleId="carbon-dialog-subtitle"
            title="Test"
            titleId="carbon-dialog-title"
          />
        </div>
        <div
          className="carbon-dialog__content"
        >
          <div
            className="carbon-dialog__inner-content"
            style={
              Object {
                "minHeight": "calc(500px - 40px)",
              }
            }
          >
            <Button
              as="secondary"
              disabled={false}
              size="medium"
              subtext=""
              theme="blue"
            >
              Button
            </Button>
            <Button
              as="secondary"
              disabled={false}
              size="medium"
              subtext=""
              theme="blue"
            >
              Button
            </Button>
          </div>
        </div>
        <Icon
          bgSize="small"
          className="carbon-dialog__close"
          data-element="close"
          onBlur={[Function]}
          onClick={[Function]}
          tabIndex="0"
          type="close"
        />
      </div>
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    >
      <div
        className="carbon-modal__background"
      />
    </CSSTransitionGroup>
  </div>
</Portal>
`;
